--- a/Readme
+++ b/Readme
@@ -1,1 +1,5 @@
 To run this script you'll need to pip instal Turtle graphics https://docs.python.org/3/library/turtle.html
+
+I learned to include extrenal libraries into my Python code and make a graphical game.
+
+Aprendí a incluir librerias externas en mi código Python para hacer un juego gráfico.
